Добавлена базовая стилизация главной страницы и каталога

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -24,15 +27,16 @@
   <!--  <img class="main-background" src="img/main-backgroundphoto.jpg" width="1200px" height="773px" alt="Обои">
     <img class="main-welcometext" src="img/main-welcometext.jpg" width="459px" height="353px" alt="Обои"> -->
     <section class="features">
-      <h2 class="features-main">Седона - небольшой городок в аризоне, заслуживающий большего!</h2>
+      <h2 class="features-main">Седона - небольшой городок в аризоне,<br> заслуживающий большего!</h2>
       <p class="features-reasons">Рассмотрим 5 причин, по которым Седона курче чем Гранд Каньон!</p>
       <h2 class="visially-hidden"> 5 причин посетить Седону </h2>
       <ul class="features-list">
+       <div class="white-block">
         <li>
           <img class="main-picture-feature" src="img/main-reason1.jpg" width="800px" height="256px" alt="Фотография-причина1">
           <h3 class="features-name"> Настоящий городок</h3>
           <p class="features-number"> - №1 - </p>
-          <p class="features-description>">Седона не аттракцион для туристов, там течет своя жизнь</p>
+          <p class="features-description>">Седона не аттракцион для туристов, там течет своя жизнь</p></div>
           <ul>
             <li class="features-list-extra">
               <h4 class="features-name">Жилье</h4>
@@ -49,11 +53,13 @@
           </ul>
         </li>
         <li>
+          <div class="white-block">
           <img class="main-picture-feature" src="img/main-reason2.jpg" width="800px" height="256px" alt="Фотография-причина2">
           <h3 class="features-name">Там есть <br> мост дьявола</h3>
           <p class="features-number"> - №2 - </p>
-          <p class="features-description>">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+          <p class="features-description>">Да, по нему можно пройти! Если конечно вы осмелитесь</p></div>
         </li>
+        <div class="gray-block">
         <li class="features-list-wide">
           <h3 class="features-name">Небольшая площадь</h3>
           <p class="features-number"> - №3 - </p>
@@ -69,6 +75,7 @@
           <p class="features-number"> - №5 - </p>
           <p class="features-description>">Большинство едет в Гранд Каньон и толпится там</p>
         </li>
+      </div>
       </ul>
     </section>
     <section class="offers">
