--- a/catalog.html
+++ b/catalog.html
@@ -29,7 +29,7 @@
         <section class="main-hotel">
           <h2 class="visially-hidden">Подходящие по критериям поиска отели</h2>
           <ul class="hotel-list">
-            <li><h2 class="hotel-name">Amara resort & Spa</h2>
+            <li><h2 class="hotel-name"><a href="#">Amara resort & Spa</a></h2>
               <p class="hotel-type"> Гостиница</p>
               <p class="hotel-price">От 4000 р.</p>
               <p class="hotel-rating">Рейтинг:8,5</p>
@@ -38,7 +38,7 @@
               <p class="main-button-about"><a href="#">Подробнее</a></p><!--Сделала ссылкой, так как переходим на другую страницу -->
               <p class="main-button-reserve"><a href="#">Забронировать</a></p><!--Сделала ссылкой, так как переходим на другую страницу -->
             </li>
-            <li><h2 class="hotel-name">Desert Quail Inn</h2>
+            <li><h2 class="hotel-name"><a href="#">Desert Quail Inn</a></h2>
               <p class="hotel-type">Мотель</p>
               <p class="hotel-price">От 3000 р.</p>
               <p class="hotel-rating">Рейтинг:8,9</p>
@@ -47,7 +47,7 @@
               <p class="main-button-about"><a href="#">Подробнее</a></p>
               <p class="main-button-reserve"><a href="#">Забронировать</a></p>
             </li>
-            <li><h2 class="hotel-name">Villas at Poco Diablo</h2>
+            <li><h2 class="hotel-name"><a href="#">Villas at Poco Diablo</a></h2>
               <p class="hotel-type">Апартаменты</p>
               <p class="hotel-price">От 2000 р.</p>
               <p class="hotel-rating">Рейтинг:9,2</p>
